<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <ImageView
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/test"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/icon_setting" />

    <TextView
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/test"
        android:layout_alignLeft="@id/test"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:clickable="true"
        android:text="@string/help"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/test"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:alpha="0.6"
        android:text="@string/copyright" />

    <TextView
        android:id="@+id/record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/test"
        android:layout_alignRight="@id/test"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:clickable="true"
        android:text="@string/record"
        android:textSize="16sp" />


    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/record"
        android:layout_alignEnd="@+id/copyright"
        android:layout_marginBottom="30dp"
        android:text="@string/start" />

</RelativeLayout>
