<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialogstyle"
    android:layout_gravity="center"
    style="@style/dialog_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
    <ImageView
        android:id="@+id/dialog_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"
            android:textSize="16dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bc2e2e"
        android:layout_margin="8dp"></View>
    <TextView
        android:id="@+id/dialog_context"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:alpha="0.8"
        android:maxWidth="450dp"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/dialog_context"/>

    <Button
        android:id="@+id/dialog_start"
        android:background="@drawable/buttonstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:height="37dp"
        android:text="@string/dialog_start" />
</LinearLayout>